# WebgpuTemplate

./: .gitmodules  CMakeLists.txt  CMakePresets.json  init.py
App/: CMakeLists.txt
App/src/: Playground.cpp
WebgpuLib/: CMakeLists.txt
WebgpuLib/src/: WebgpuLib.h
WebgpuLib/src/Base/: Application.cpp  Application.h  Assert.h  Base.h  Event.h  Filesystem.cpp  Filesystem.h  GraphicsContext.cpp  GraphicsContext.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Main.cpp  Timer.h  Timestep.h  Utils.h  Window.h
WebgpuLib/src/Platform/Native/: NativeFilesystem.cpp  NativeGraphicsContext.cpp  NativeUtils.cpp  NativeWindow.cpp
WebgpuLib/src/Platform/Web/: WebFilesystem.cpp  WebGraphicsContext.cpp  WebUtils.cpp  WebWindow.cpp
src/web/: shell.css  shell.html
